# kuber-cron

./: .dockerignore  Dockerfile  README.md  crontab  pyproject.toml
config/: crontab
docs/: architecture.md  getting_started.md  troubleshooting.md  troubleshooting_report.md  writing_jobs.md
k8s/: deployment.yaml  pv.yaml  pvc.yaml
src/: scheduler.py
src/jobs/: __init__.py  backup.py  cpu_stress.py  memory_stress.py
temp_build/: Dockerfile  pyproject.toml
temp_build/config/: crontab
temp_build/src/: scheduler.py
temp_build/src/jobs/: __init__.py  backup.py  cpu_stress.py  test.py
