[tool.poetry]
name = "kuber-cron"
version = "0.1.0"
description = "A Kubernetes-based cron job manager with auto-recovery capabilities"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^28.1.0"
apscheduler = "^3.10.4"
pyyaml = "^6.0.1"
python-crontab = "^3.0.0"
prometheus-client = "^0.19.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
croniter = "^2.0.1"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 